Added code, documentation and dependancies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: rftp
-Title: Access to FTP files in bulk with ease. 
+Title: Access to FTP files in bulk with ease
 Version: 0.0.0.9000
 Authors@R: person("Bulat", "Yapparov", email = "bulat.yapparov@made.com", role = c("aut", "cre"))
 Description: Wraps RCurl function and provides functionality to search for all files in a given
@@ -8,3 +8,8 @@ Depends: R (>= 3.4.4)
 License: GPL
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
+Imports:
+  stringi,
+  RCurl,
+  data.table
